--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <h1>Age Calculator</h1>
         <div class="input-box">
           <input type="date" id="date" />
-          <button>Calculate</button>
+          <button onclick="calculateAge()">Calculate</button>
         </div>
+
+        <p id="result"></p>
       </div>
     </div>
 
